--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   },
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@polymer/gen-typescript-declarations": "^1.2.0",
-    "bower": "^1.8.0"
+    "polymer/gen-typescript-declarations": "^1.2.0",
   },
   "scripts": {
-    "update-types": "bower install && gen-typescript-declarations --deleteExisting --outDir ."
+    "update-types": "yarn install && gen-typescript-declarations --deleteExisting --outDir ."
   }
 }
